# Memori

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: 01_retrieve_project_context.yaml  01_save_stable_global_preference.yaml  02_ignore_transient_noise.yaml  02_retrieve_topic_isolation.yaml  03_save_uncertain_commitment.yaml  03_write_stable_preference.yaml  04_no_write_noise.yaml  04_update_existing_preference.yaml  05_delete_forget_request.yaml  05_write_uncertain_fact.yaml  06_prune_duplicate_memories.yaml  06_update_existing_preference.yaml  07_global_scope_always_injected.yaml  07_update_confirmed_deadline.yaml  08_delete_forget_request.yaml  08_topical_retrieval_precision.yaml  09_consolidate_duplicates_and_noise.yaml  09_full_multi_session_loop.yaml  09_multi_session_update_persists.yaml  10_conversation_recall_simple.yaml  10_conversation_recall_without_memory.yaml  10_full_multi_session_loop.yaml  11_answer_uses_retrieved_preference.yaml  11_conversation_similar_disambiguates.yaml  12_conversation_with_memories.yaml  12_save_user_identity.yaml  13_do_not_duplicate_restatement.yaml  13_write_user_introduction.yaml  14_combined_memory_and_conversation_context.yaml  15_importance_category_reranking.yaml
docs/: ARCHITECTURE.md  README.md  architecture.md  memory_architecture.md
src/benchmark/: grader.py  judge.py  loader.py  main.py  scenarios.py
src/cli/: main.py
src/core/: engine.py  llm.py  openrouter.py  store.py
src/memori/: __init__.py  client.py
src/memori/benchmark/: assertions.py  entry.py  (+5 more)
(+23 files in other folders)
